--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     <script defer src="script.js"></script>
 
 </head>
-<body>
-    
+<body class="d-flex justify-content-center align-items-center">
+
+    <div id="chat-box" class="col-10 bg-white">
+
+    </div>
+
 </body>
 </html>
