--- a/index.html
+++ b/index.html
@@ -30,7 +30,45 @@
 </head>
 <body class="d-flex justify-content-center align-items-center">
 
-    <div id="chat-box" class="col-10 bg-white">
+    <div id="chat-box" class="col-10 bg-white d-flex">
+
+        <div id="chat-box-left" class="debug h-100 col-4">
+
+            <div id="list-header" class="debug bgc-header">
+
+            </div>
+
+            <div id="push-notification" class="debug bgc-push-notification">
+
+            </div>
+
+            <div id="search" class="debug bgc-push-search">
+
+            </div>
+
+            <div id="contact-list" class="debug">
+
+            </div>
+
+        </div>
+
+        <div id="chat-box-right" class="debug h-100 col-8">
+           
+            <div id="chat-header" class="debug bgc-header">
+
+            </div>
+
+            <div id="chat-main" class="debug">
+
+            </div>
+
+            <div id="chat-footer" class="debug bgc-footer">
+
+            </div>
+
+        </div>
+
+
 
     </div>
 
