--- a/index.html
+++ b/index.html
@@ -30,28 +30,62 @@
 </head>
 <body class="d-flex justify-content-center align-items-center">
 
+    <!-- QUADRATONE CENTRALE DELLA WEB APP -->
     <div id="chat-box" class="col-10 bg-white d-flex">
-
+        
+        <!-- COLONNA DI SINISTRA -->
         <div id="chat-box-left" class="debug h-100 col-4">
 
-            <div id="list-header" class="debug bgc-header">
-
+            <!-- FOOTER DELLA COLONNA SINISTRA -->
+            <div id="list-header" class="debug bgc-header d-flex justify-content-between align-items-center px-2">
+                <div class="user h-100 d-flex align-items-center">
+                    <div class="user-img d-flex">
+                        <img src="img/avatar_1.jpg" alt="Avatar 1" class="img-fluid rounded-5 p-1 m-0">
+                    </div>
+                    <h6 class="m-0">Davide Cardelli</h6>
+                </div>
+                <div class="list-header-icon">
+                    <i class="bi bi-arrow-clockwise p-2 m-0 h5"></i>
+                    <i class="bi bi-chat-right p-2 m-0 h5"></i>
+                    <i class="bi bi-three-dots p-2 m-0 h5"></i>
+                </div>
             </div>
 
+            <!-- BARRA PER ATTIVARE LE NOTIFICHE -->
             <div id="push-notification" class="debug bgc-push-notification">
-
+                <div class="d-flex align-items-center h-100 px-3">
+                    <div class="push-notification-icon d-flex justify-content-center align-items-center rounded-5">
+                        <i class="fa-solid fa-bell-slash bg-white rounded-5 p-2 m-0 h4"></i>
+                    </div>
+                    <div class="push-notification-text ps-2">
+                        <!-- # TODO SISTEMARE TESTO COME DA TRACCIA -->
+                        <p class="m-0">Ricevi notifiche di nuovi messaggi</p>
+                        <p class="m-0">Attiva notifiche desktop</p>
+                    </div>
+                </div>
             </div>
 
-            <div id="search" class="debug bgc-push-search">
-
+            <!-- BARRA DI RICERCA -->
+            <div id="search" class="debug bgc-push-search d-flex align-items-center px-1">
+                <!-- # TODO INSERIRE LA LENTE DI INGRANDIMENTO -->
+                <input id="list-search" type="text" class="rounded-1 ps-5 w-100" placeholder="Cerca o inizia una nuova chat">
             </div>
 
+            <!-- LISTA DELLE VARIE CHAT -->
             <div id="contact-list" class="debug">
-
+                <div v-for="contact in data.contacts" class="user d-flex">
+                    <div class="user-img h-100 p-2 d-flex">
+                        <img src="img/avatar_1.jpg" alt="Avatar 1" class="img-fluid rounded-5 m-0">
+                    </div>
+                    <div class="user-name py-3 h-100">
+                        <h6 class="m-0">{{contact.name}}</h6>
+                    </div>
+                </div>
             </div>
 
         </div>
 
+        <!-- COLONNA DI DESTRA -->
         <div id="chat-box-right" class="debug h-100 col-8">
            
             <div id="chat-header" class="debug bgc-header">
@@ -67,9 +101,6 @@
             </div>
 
         </div>
-
-
-
     </div>
 
 </body>
