--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
             <!-- FOOTER DELLA COLONNA SINISTRA -->
             <div id="list-header" class="debug bgc-header d-flex justify-content-between align-items-center px-2">
-                <div class="user h-100 d-flex align-items-center">
+                <div class="h-100 d-flex align-items-center">
                     <div class="user-img d-flex">
-                        <img src="img/avatar_1.jpg" alt="Avatar 1" class="img-fluid rounded-5 p-1 m-0">
+                        <img :src="`img/avatar${data.user.avatar}.jpg`" alt="Avatar 1" class="img-fluid rounded-5 p-1 m-0">
                     </div>
-                    <h6 class="m-0">Davide Cardelli</h6>
+                    <h6 class="m-0">{{data.user.name}}</h6>
                 </div>
                 <div class="list-header-icon">
                     <i class="bi bi-arrow-clockwise p-2 m-0 h5"></i>
@@ -75,7 +75,7 @@
             <div id="contact-list" class="debug">
                 <div v-for="contact in data.contacts" class="user d-flex">
                     <div class="user-img h-100 p-2 d-flex">
-                        <img src="img/avatar_1.jpg" alt="Avatar 1" class="img-fluid rounded-5 m-0">
+                        <img :src="`img/avatar${contact.avatar}.jpg`" alt="Avatar 1" class="img-fluid rounded-5 m-0">
                     </div>
                     <div class="user-name py-3 h-100">
                         <h6 class="m-0">{{contact.name}}</h6>
@@ -88,7 +88,18 @@
         <!-- COLONNA DI DESTRA -->
         <div id="chat-box-right" class="debug h-100 col-8">
            
-            <div id="chat-header" class="debug bgc-header">
+            <div id="chat-header" class="debug bgc-header d-flex justify-content-between align-items-center px-2">
+                <div class="h-100 d-flex align-items-center">
+                    <div class="user-img d-flex">
+                        <img src="img/avatar_1.jpg" alt="Avatar 1" class="img-fluid rounded-5 p-1 m-0">
+                    </div>
+                    <h6 class="m-0">Michele</h6>
+                </div>
+                <div class="list-header-icon">
+                    <i class="bi bi-search p-2 m-0 h5"></i>
+                    <i class="bi bi-link-45deg p-2 m-0 h5"></i>
+                    <i class="bi bi-three-dots p-2 m-0 h5"></i>
+                </div>
 
             </div>
 
@@ -97,6 +108,7 @@
             </div>
 
             <div id="chat-footer" class="debug bgc-footer">
+                
 
             </div>
 
