--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
 
             </div>
 
-            <div id="chat-footer" class="debug bgc-footer">
-                
-
+            <div id="chat-footer" class="debug bgc-footer d-flex justify-content-evenly align-items-center">
+                <i class="bi bi-emoji-smile-fill p-2 m-0 h5"></i>
+                <input id="list-search" type="text" class="col-10 rounded-1 h-75 ps-2" placeholder="Cerca o inizia una nuova chat">
+                <i class="bi bi-mic-fill p-2 m-0 h5"></i>
             </div>
 
         </div>
