--- a/index.html
+++ b/index.html
@@ -103,8 +103,13 @@
 
             </div>
 
-            <div id="chat-main" class="debug">
-
+            <div id="chat-main" class="debug px-5 py-3 d-flex flex-column">
+                <div class="message recived col-6">
+                    <span>Ciao Davide, come stai?</span>
+                </div>
+                <div class="message sent sent col-6">
+                    <span>Molto bene. Grazie.</span>
+                </div>
             </div>
 
             <div id="chat-footer" class="debug bgc-footer d-flex justify-content-evenly align-items-center">
