--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
             </div>
 
             <div id="chat-main" class="debug px-5 py-3 d-flex flex-column">
-                <div v-for="(message, i) in data.contacts[currentIndex].messages" class="message col-6" :class="isRecived(i) ? 'received' : 'sent'">
-                    <span>{{ message.text }}</span>
+                <div v-for="(message, i) in data.contacts[currentIndex].messages" class="message col-6 d-flex justify-content-between" :class="isRecived(i) ? 'received' : 'sent'">
+                    <span class="col-9 m-0">{{ message.text }}</span>
+                    <span class="col-3 m-0 date">{{ message.date }}</span>
                 </div>
             </div>
 
