--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                 <div id="chat-footer" class="bgc-footer d-flex justify-content-evenly align-items-center">
                     <i class="bi bi-emoji-smile-fill p-2 m-0 h5"></i>
-                    <input v-model="newMessage" id="list-search" type="text" class="col-10 rounded-1 h-75 ps-2" placeholder="Cerca o inizia una nuova chat">
+                    <input v-model="newMessage" id="list-search" type="text" class="col-10 rounded-1 h-75 ps-2" placeholder="Cerca o inizia una nuova chat" @keyup.enter="sendMessage()">
                     <i class="bi bi-mic-fill p-2 m-0 h5"></i>
                 </div>
 
