--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- COLONNA DI SINISTRA -->
             <div id="chat-box-left" class="h-100 col-4">
 
-                <!-- FOOTER DELLA COLONNA SINISTRA -->
+                <!-- HEADER DELLA COLONNA SINISTRA -->
                 <div id="list-header" class="bgc-header d-flex justify-content-between align-items-center px-2">
                     <div class="h-100 d-flex align-items-center">
                         <div class="user-img d-flex">
@@ -73,9 +73,9 @@
 
                 <!-- LISTA DELLE VARIE CHAT -->
                 <div id="contact-list">
-                    <div v-for="(contact, i) in filter" class="user d-flex" @click="goTo(i)">
+                    <div v-for="(contact, i) in filter" class="user d-flex" :class="{'selected' : i === currentIndex}" @click="goTo(i)">
                         <div class="user-img h-100 p-2 d-flex">
-                            <img :src="`img/avatar${contact.avatar}.jpg`" alt="Avatar 1" class="img-fluid rounded-5 m-0">
+                            <img :src="`img/avatar${contact.avatar}.jpg`" alt="Avatar 1" class="img-fluid rounded-5 m-0" >
                         </div>
                         <div class="user-name py-3 h-100">
                             <h6 class="m-0">{{contact.name}}</h6>
