--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <!-- LISTA MESSAGGI -->
                 <div id="chat-main" class="px-5 py-3 d-flex flex-column">
-                    <div v-for="(message, i) in data.contacts[currentIndex].messages" class="message col-6 d-flex justify-content-between" :class="message.status">
+                    <div v-for="(message, i) in data.contacts[currentIndex].messages" class="message col-6 d-flex justify-content-between" :class="message.status" @click="deleteMessage(i)">
                         <span class="col-9 m-0">{{ message.text }}</span>
                         <span class="col-3 m-0 date">{{ message.date }}</span>
                     </div>
